<resources>
    <string name="app_name">Dice</string>

    <string name="todo">TODO</string>
    <string name="ai_dat_dubla">Ai dat dublă!</string>
    <string name="bravo_boss">Foarte tare! Bravo, mai încearcă până mai dai o dată!</string>
    <string name="super_super">Super tare, mersi</string>

    <!--DICE-->
    <string name="dice_previous_roll">Zarul anterior</string>
    <string name="dice_roll">Învârte zarurile</string>
    <string name="dice_shake">… sau dă shake</string>

    <!--HISTORY-->
    <string name="history_title">Istoric</string>
    <string name="hv_notification">Nu ai istoric încă</string>
    <string name="hv_notification_details">Dă shake sau învârte zarurile, aici vor apărea toate scorurile tale</string>

</resources>