<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pattern">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_previous_roll"
        style="@style/AppTheme.Widget.TextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:elevation="1dp"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        android:text="@string/dice_previous_roll"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_history"
        app:layout_constraintEnd_toStartOf="@id/iv_history"
        app:layout_constraintTop_toTopOf="@id/iv_history" />

    <ImageView
        android:id="@+id/iv_history"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:elevation="1dp"
        android:src="@drawable/ic_nav_history"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@id/toolbar" />

    <View
        android:id="@+id/container_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_dice_history"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_history"
        app:layout_constraintEnd_toEndOf="@id/iv_history"
        app:layout_constraintStart_toStartOf="@id/tv_previous_roll"
        app:layout_constraintTop_toTopOf="@id/iv_history" />

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:src="@drawable/illustration_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_history" />

<!--    zarul 1-->
    <ImageView
        android:id="@+id/iv_first_die"
        android:layout_width="108dp"
        android:layout_height="0dp"
        android:src="@drawable/dice_face_01"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/btn_roll"
        app:layout_constraintEnd_toStartOf="@id/iv_second_die"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_title" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationViewZar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/dice_shuffle_01"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btn_roll"
        app:layout_constraintEnd_toStartOf="@id/iv_second_die"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_title"/>

<!--    zarul 2-->
    <ImageView
        android:id="@+id/iv_second_die"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:src="@drawable/dice_face_02"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/iv_first_die"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_first_die"
        app:layout_constraintTop_toTopOf="@id/iv_first_die" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationViewZar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/dice_shuffle_01"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/iv_first_die"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_first_die"
        app:layout_constraintTop_toTopOf="@id/iv_first_die"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_roll"
        style="@style/AppTheme.Widget.MaterialComponents.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/dice_roll"
        app:layout_constraintBottom_toTopOf="@id/tv_shake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_first_die"
        tools:background="@color/bg_button_primary" />

    <TextView
        android:id="@+id/tv_shake"
        style="@style/AppTheme.Widget.TextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:text="@string/dice_shake"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableEndCompat="@drawable/ic_shake"
        app:layout_constraintBottom_toTopOf="@id/iv_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/bg_footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
